--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,7 +25,12 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: '1.8'
-
-
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+            path: ~/.m2
+            key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+            restore-keys: ${{ runner.os }}-m2-
+            
     - name: Build with Maven
       run: mvn -f ./attsw-silva/pom.xml clean verify
