--- a/attsw-silva/pom.xml
+++ b/attsw-silva/pom.xml
@@ -18,19 +18,23 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <mongo.driver.version>3.12.10</mongo.driver.version>
     <testcontainers.version>1.16.3</testcontainers.version>
+    <assertj.swing.version>3.17.1</assertj.swing.version>
+    <mockito.version>4.4.0</mockito.version>
+    <junit.version>4.13.2</junit.version>
+    
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13</version>
+       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
 	 <groupId>org.mockito</groupId>
 	 <artifactId>mockito-core</artifactId>
-	 <version>3.2.4</version>
+	 <version>${mockito.version}</version>
 	 <scope>test</scope>
 	</dependency>
 	<dependency>
@@ -54,6 +58,12 @@
       <groupId>org.testcontainers</groupId>
       <artifactId>mongodb</artifactId>
       <version>${testcontainers.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-swing-junit</artifactId>
+      <version>${assertj.swing.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
