--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,10 +17,15 @@ on:
 jobs:
   build:
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest #${{ matrix.os }}
     strategy:
         matrix:
-            os: [ubuntu-latest, macos-latest, windows-latest]
+        #os: [ubuntu-latest, macos-latest, windows-latest]
+            #os: [ubuntu-latest]
+            additional-maven-args: >
+              -Pcoveralls
+              -DrepoToken=$COVERALLS_REPO_TOKEN
+              -DpullRequest=${{ github.event.pull_request.number }}
     
     name: Build with Java on ${{ matrix.os }}
     steps:
@@ -37,4 +42,20 @@ jobs:
             restore-keys: ${{ runner.os }}-m2-
             
     - name: Build with Maven
-      run: mvn -f ./attsw-silva/pom.xml clean verify
+      #run: mvn -f ./attsw-silva/pom.xml clean verify
+      run: xvfb-run mvn verify ${{ matrix.additional-maven-args }}
+      working-directory: ${{ env.workdir }}
+      env: 
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+    - name: Generate JUnit Report
+      run: >
+        mvn surefire-report:report-only site:site -DgenerateReports=false
+      working-directory: ${{ env.workdir }}
+      if: ${{ always() }}
+    - name: Archive JUnit Report
+      uses: actions/upload-artifact@v2
+      if: ${{ always() }}
+      with:
+        name: surefire-report-jdk-${{ matrix.java }}
+        path: '**/target/site'
+
