--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,28 +17,28 @@ on:
 jobs:
   build:
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
         matrix:
         #os: [ubuntu-latest, macos-latest, windows-latest]
-            os: [ubuntu-latest]
-            additional-maven-args: >
-              -Pcoveralls
-              -DrepoToken=$COVERALLS_REPO_TOKEN
-              -DpullRequest=${{ github.event.pull_request.number }}
+            -java: 8
+             additional-maven-args: >
+                -Pcoveralls
+                -DrepoToken=$COVERALLS_REPO_TOKEN
+                -DpullRequest=${{ github.event.pull_request.number }}
     
     name: Build with Java on ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 8
+    - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v1
       with:
-        java-version: '1.8'
+        java-version: ${{ matrix.java }}
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
             path: ~/.m2
-            key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+            key: ${{ runner.os }}-m2-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml', '**/*.yml') }}
             restore-keys: ${{ runner.os }}-m2-
             
     - name: Build with Maven
