--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,8 +21,9 @@ jobs:
     strategy:
         matrix:
         #os: [ubuntu-latest, macos-latest, windows-latest]
-            -java: 8
-             additional-maven-args: >
+          include:
+            - java: 8
+              additional-maven-args: >
                 -Pcoveralls
                 -DrepoToken=$COVERALLS_REPO_TOKEN
                 -DpullRequest=${{ github.event.pull_request.number }}
