--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,6 +18,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      workdir: attsw-silva
     strategy:
         matrix:
         #os: [ubuntu-latest, macos-latest, windows-latest]
