--- a/attsw-silva/pom.xml
+++ b/attsw-silva/pom.xml
@@ -88,11 +88,6 @@
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
           <version>0.8.6</version>
-          <configuration>
-            <excludes>
-              <exclude>**/src/main/java/com/attsw/app/swing/**/*</exclude>
-            </excludes>
-          </configuration>
           <executions>
             <execution>
               <goals>
@@ -210,6 +205,11 @@
             <!-- configured in pluginManagement -->
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
+            <configuration>
+            <excludes>
+              <exclude>**/swing/*</exclude>
+            </excludes>
+          </configuration>
           </plugin>
         </plugins>
       </build>
