--- a/attsw-silva/pom.xml
+++ b/attsw-silva/pom.xml
@@ -90,7 +90,7 @@
           <version>0.8.6</version>
            <configuration>
                     <excludes>
-                        <exclude>**/StudyPlanManager.*</exclude>
+                        <exclude>**/StudyPlanManger.*</exclude>
                     </excludes>
                 </configuration>
           <executions>
