--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -62,4 +62,14 @@ jobs:
       with:
         name: surefire-report-jdk-${{ matrix.java }}
         path: '**/target/site'
+    - name: Build with Maven and SonarCloud
+      run: >
+        xvfb-run mvn verify -Pjacoco sonar:sonar
+        -Dsonar.organization=hondamunigeprasannasilva
+        -Dsonar.host.url=https://sonarcloud.io
+        -Dsonar.projectKey=HondamunigePrasannaSilva_StudyPlanManger-Attsw
+      working-directory: ${{ env.workdir }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
