--- a/attsw-silva/pom.xml
+++ b/attsw-silva/pom.xml
@@ -22,6 +22,8 @@
     <mockito.version>4.4.0</mockito.version>
     <junit.version>4.13.2</junit.version>
     
+    <sonar.organization>hondamunigeprasannasilva</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 
   <dependencies>
@@ -80,10 +82,15 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
         </plugin>
-      </plugins>
+        <plugin> 
+         <groupId>org.sonarsource.scanner.maven</groupId>
+         <artifactId>sonar-maven-plugin</artifactId>
+         <version>3.8.0.2131</version>
+        </plugin>
+      </plugins>	
     </pluginManagement>
     <plugins>
-		
+	
        <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
