--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,7 @@ jobs:
                 -Pcoveralls
                 -DrepoToken=$COVERALLS_REPO_TOKEN
                 -DpullRequest=${{ github.event.pull_request.number }}
+            - java: 11
     
     name: Build with Java on ${{ matrix.os }}
     steps:
@@ -63,8 +64,6 @@ jobs:
         name: surefire-report-jdk-${{ matrix.java }}
         path: '**/target/site'
     - name: Build with Maven and SonarCloud
-      with:
-        java-version: 11
       run: >
         xvfb-run mvn verify -Pjacoco sonar:sonar
         -Dsonar.organization=hondamunigeprasannasilva
