--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,11 +25,15 @@ jobs:
         #os: [ubuntu-latest, macos-latest, windows-latest]
           include:
             - java: 8
+            - java: 11
               additional-maven-args: >
-                -Pcoveralls
+                -Pcoveralls, sonar:sonar
+                -Dsonar.organization=hondamunigeprasannasilva
+                -Dsonar.host.url=https://sonarcloud.io
+                -Dsonar.projectKey=HondamunigePrasannaSilva_StudyPlanManger-Attsw
                 -DrepoToken=$COVERALLS_REPO_TOKEN
                 -DpullRequest=${{ github.event.pull_request.number }}
-            - java: 11
+            
     
     name: Build with Java on ${{ matrix.os }}
     steps:
@@ -37,11 +41,14 @@ jobs:
     - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v1
       with:
+        distribution: 'zulu'
         java-version: ${{ matrix.java }}
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
-            path: ~/.m2
+            path: |
+              ~/.m2
+              ~/.sonar/cache
             key: ${{ runner.os }}-m2-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml', '**/*.yml') }}
             restore-keys: ${{ runner.os }}-m2-
             
@@ -52,9 +59,12 @@ jobs:
       working-directory: ${{ env.workdir }}
       env: 
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        
     - name: Generate JUnit Report
       run: >
-        mvn surefire-report:report-only site:site -DgenerateReports=false
+        mvn surefire-report:report-only surefire-report:failsafe-report-only site:site -DgenerateReports=false
       working-directory: ${{ env.workdir }}
       if: ${{ always() }}
     - name: Archive JUnit Report
@@ -63,14 +73,4 @@ jobs:
       with:
         name: surefire-report-jdk-${{ matrix.java }}
         path: '**/target/site'
-    - name: Build with Maven and SonarCloud
-      run: >
-        xvfb-run mvn verify -Pjacoco sonar:sonar
-        -Dsonar.organization=hondamunigeprasannasilva
-        -Dsonar.host.url=https://sonarcloud.io
-        -Dsonar.projectKey=HondamunigePrasannaSilva_StudyPlanManger-Attsw
-      working-directory: ${{ env.workdir }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
