--- a/attsw-silva/pom.xml
+++ b/attsw-silva/pom.xml
@@ -23,7 +23,10 @@
     
     <sonar.organization>hondamunigeprasannasilva</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-  </properties>
+
+    <sonar.coverage.exclusions>
+            **/StudyPlanManger.*
+    </sonar.coverage.exclusions>  </properties>
 
   <dependencies>
     <dependency>
