--- a/attsw-silva/pom.xml
+++ b/attsw-silva/pom.xml
@@ -75,6 +75,11 @@
       <artifactId>picocli</artifactId>
       <version>4.6.1</version>
     </dependency>
+     <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version>
+    </dependency>
   </dependencies>
 
   <build>
