--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
             - java: 8
             - java: 17
               additional-maven-args: >
-                -Pcoveralls, sonar:sonar
+                -Pcoveralls, sonar:sonar, pit
                 -Dsonar.organization=hondamunigeprasannasilva
                 -Dsonar.host.url=https://sonarcloud.io
                 -Dsonar.projectKey=HondamunigePrasannaSilva_StudyPlanManger-Attsw
@@ -53,7 +53,6 @@ jobs:
             restore-keys: ${{ runner.os }}-m2-
             
     - name: Build with Maven
-      #run: mvn -f ./attsw-silva/pom.xml clean verify
       run: >
         xvfb-run mvn verify ${{ matrix.additional-maven-args }}
       working-directory: ${{ env.workdir }}
