--- a/attsw-silva/pom.xml
+++ b/attsw-silva/pom.xml
@@ -258,6 +258,10 @@
                 <ports>
                   <port>mongo.mapped.port:27017</port>
                 </ports>
+                 <wait>
+                 <log>waiting for connections on port</log>
+                 <time>60000</time>
+                 </wait>
               </run>
             </image>
           </images>
@@ -269,6 +273,7 @@
             <goals>
               <goal>start</goal>
             </goals>
+
           </execution>
           <execution>
             <id>docker-stop</id>
