--- a/attsw-silva/pom.xml
+++ b/attsw-silva/pom.xml
@@ -194,24 +194,27 @@
         </plugin>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-shade-plugin</artifactId>
-            <version>3.2.4</version> <!-- Use the latest version available -->
+            <artifactId>maven-assembly-plugin</artifactId>
             <executions>
                 <execution>
                     <phase>package</phase>
                     <goals>
-                        <goal>shade</goal>
+                        <goal>single</goal>
                     </goals>
                     <configuration>
-                        <transformers>
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <descriptorRefs>
+                            <descriptorRef>jar-with-dependencies</descriptorRef>
+                        </descriptorRefs>
+                        <archive>
+                            <manifest>
                                 <mainClass>com.attsw.app.swing.StudyPlanManger</mainClass>
-                            </transformer>
-                        </transformers>
+                            </manifest>
+                        </archive>
                     </configuration>
                 </execution>
             </executions>
         </plugin>
+	
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
